--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -19,6 +19,7 @@ contourpy==1.0.5
 cycler==0.11.0
 docopt==0.6.2
 fastjsonschema==2.16.2
+hyperopt==0.2.7
 idna==3.4
 jsonschema==4.16.0
 jupyter_core==4.11.2
@@ -39,12 +40,14 @@ regex==2022.9.13
 requests==2.28.1
 six==1.16.0
 scipy==1.9.3
+shap==0.41.0
 sympy==1.9
 traitlets==5.5.0
 urllib3==1.26.12
 yarg==0.1.9
 joblib==1.2.0
 scikit-learn==1.1.3
+scikit-optimize==0.9.0
 sklearn==0.0
 threadpoolctl==3.1.0
 mlxtend==0.21.0
