--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -12,6 +12,7 @@ xgboost==1.6.2
 regex==2022.9.13
 mlxtend==0.21.0
 attrs==22.1.0
+catboost=1.1.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
 colorama==0.4.6
