--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,10 +1,7 @@
-numpy==1.23.2
-pandas==1.4.4
-scikit-learn==1.1.2
+numpy==1.23.4
+pandas==1.5.1
 lightgbm==3.3.3
-matplotlib==3.5.3
-scipy==1.9.2
-seaborn==0.12.1
+seaborn
 statsmodels==0.13.2
 lightgbm==3.3.3
 sklearn==0.0
@@ -27,8 +24,6 @@ jupyter_core==4.11.2
 matplotlib==3.6.1
 mpmath==1.2.1
 nbformat==5.7.0
-numpy==1.23.4
-pandas==1.5.1
 pigar==1.0.0
 pipreqs==0.4.11
 plink==2.4.1
