--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -77,6 +77,7 @@ qtconsole==5.4.0
 QtPy==2.3.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+seaborn==0.12.2
 Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.3.0
@@ -92,5 +93,3 @@ webcolors==1.12
 webencodings==0.5.1
 websocket-client==1.5.1
 widgetsnbextension==4.0.5
-
-seaborn~=0.12.2
